tests/NormalTests/paczka1/fuzzy1/86820569.err
Error in line 1: S644 S575 74,3
Error in line 4: QGBF67lwGOu S480 58,9
Error in line 32: UYJRWA S84 31,2
